# power_point_assistant

./: .gitignore  CLAUDE.md  DIAGRAM_IMPORT_FIX.md  PowerPoint_Assistant_Optimized_Template.pptx  PowerPoint_Assistant_Template.pptx  README.md  create_optimized_template.py  create_template.py  project_example_cloud_analytics.md  pyproject.toml  requirements.txt  streamlit_app.py  test_diagram_generation.py  verify_diagram_imports.py
.claude/: settings.local.json
PRPs/: INITIAL_data_architecture_diagrams.md  automated_powerpoint_generation.md  data_architecture_diagrams_implementation.md
examples/: README.md
examples/configs/: architecture_patterns.yaml  diagram_templates.json
examples/projects/: analytics_platform.md  e_commerce_platform.md
src/chains/: content_generation_chain.py  diagram_generation_chain.py  document_analysis_chain.py  orchestration_chain.py  project_analysis_chain.py
src/config/: settings.py
src/models/: data_models.py
src/tools/: diagram_generator.py  diagram_styler.py  document_processor.py  file_handler.py  presentation_builder.py  template_manager.py
tests/: conftest.py  test_integration.py  test_models.py
tests/test_chains/: test_project_analysis_chain.py
tests/test_diagrams/: __init__.py  test_diagram_generation_chain.py  test_diagram_generator.py
tests/test_tools/: test_document_processor.py
